syntax = "proto3";

message ObjectUnionNonPredictable {
    repeated ObjectUnionNonPredictable.IWrapper_lt_ObjectUnionNonPredictable.IUnion_gt_ value = 1;
    message IWrapper_lt_ObjectUnionNonPredictable {
        message IUnion_gt_ {
            IPointer_lt_ObjectUnionNonPredictable.IUnion_gt_ value = 1;
        }
    }

    message IWrapper_lt_boolean_gt_ {
        IPointer_lt_boolean_gt_ value = 1;
    }

    message IWrapper_lt_number_gt_ {
        IPointer_lt_number_gt_ value = 1;
    }

    message IWrapper_lt_string_gt_ {
        IPointer_lt_string_gt_ value = 1;
    }
}

message IPointer_lt_ObjectUnionNonPredictable {
    message IUnion_gt_ {
        oneof value {
            ObjectUnionNonPredictable.IWrapper_lt_string_gt_ v1 = 1
            ObjectUnionNonPredictable.IWrapper_lt_number_gt_ v2 = 2
            ObjectUnionNonPredictable.IWrapper_lt_boolean_gt_ v3 = 3
        }
    }
}

message IPointer_lt_boolean_gt_ {
    bool value = 1;
}

message IPointer_lt_number_gt_ {
    double value = 1;
}

message IPointer_lt_string_gt_ {
    string value = 1;
}